--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react-app": "^5.0.0"
+    "eslint-plugin-react-app": "^5.0.0",
+    "json-server": "^0.14.2"
   }
 }
