--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sandbox",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kana315.github.io/sandbox",
   "dependencies": {
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
@@ -9,6 +10,7 @@
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "^4.1.14",
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -20,10 +22,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "mock": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "json-server --watch db.json --port 4567"
+    "dev": "json-server --watch db.json --port 4567",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
