--- a/package.json
+++ b/package.json
@@ -13,15 +13,11 @@
     "react-scripts": "3.0.0",
     "typescript": "3.4.5"
   },
-  "config": {
-    "demo": "aa"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "demo": "echo $npm_package_config-demo"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
